--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="./src/index.js" type="text/jsx"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="hi"></div>
   </body>
 </html>
 
